--- a/package.json
+++ b/package.json
@@ -29,13 +29,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "scp2": "~0.1.0a2",
-  },
-  "devDependencies": {
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.0"
+    "async": "~0.2.6",
+    "scp2": "~0.1.0b1"
   },
   "peerDependencies": {
     "grunt": "~0.4.0"
