--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "grunt-scp",
   "description": "Copy files to remote server",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "homepage": "https://github.com/spmjs/grunt-scp",
   "author": {
     "name": "Hsiaoming Yang",
-    "email": "lepture@me.com",
+    "email": "me@lepture.com",
     "url": "http://lepture.com"
   },
   "repository": {
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "async": "~0.2.6",
-    "scp2": "~0.1.3"
+    "scp2": "~0.1.4"
   },
   "keywords": [
     "gruntplugin"
