--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "async": "~0.2.6",
-    "scp2": "~0.1.4"
+    "scp2": "~0.1.4",
+    "inquirer": "~0.3.5"
   },
   "keywords": [
     "gruntplugin"
