--- a/package.json
+++ b/package.json
@@ -32,6 +32,15 @@
     "scp2": "~0.1.4",
     "inquirer": "~0.3.5"
   },
+  "devDependencies": {
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt": "~0.4.5"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.5"
+  },
   "keywords": [
     "gruntplugin"
   ]
