--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   },
   "dependencies": {
     "async": "~0.2.6",
-    "scp2": "~0.1.4",
-    "inquirer": "~0.3.5"
+    "chalk": "^1.1.1",
+    "inquirer": "~0.3.5",
+    "scp2": "~0.1.4"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
